--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <div class="video-container">
-        <video autoplay></video>
+        <video autoplay>
+            
+        </video>
         <div class="video-filters">
             <div class="filter" style="background-color: rgba(255,255,0,0.2);"></div>
-            <div class="filter"  style="background-color: rgba(102,0,255,0.2);"></div>
-            <div class="filter"  style="background-color: rgba(0,255,153,0.2);"></div>
-            <div class="filter"  style="background-color: rgba(0,153,255,0.2);"></div>
+            <div class="filter" style="background-color: rgba(102,0,255,0.2);"></div>
+            <div class="filter" style="background-color: rgba(0,255,153,0.2);"></div>
+            <div class="filter" style="background-color: rgba(0,153,255,0.2);"></div>
             <div class="filter" style="background-color: rgba(255,0,0,0.2);"></div>
-            <div class="filter"  style="background-color: rgba(43,225,0,0.2);"></div>
+            <div class="filter" style="background-color: rgba(43,225,0,0.2);"></div>
         </div>
         <div class="controls">
             <div class="zoom">
@@ -25,9 +27,10 @@
             </div>
             <div class="record"><div class="inner-record "></div></div>
             <div class="capture"><div class="inner-capture "></div></div>
-            <div class="gallery">Gallery</div>
+            <div class="galleryBtn">Gallery</div>
         </div>
     </div>
+    <script src="db.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
